# daily_report_bot

./: .coverage  CLAUDE.md  NOTION_GATEWAY_IMPLEMENTATION.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: llm-summarizer-agent.md  notion-writer-agent.md  ocr-extractor-agent.md  powershell-logger-agent.md  python-aggregator-agent.md  windows-ui-agent.md
.claude/skills/: daily-report-workflow.md  drb-architecture.md  llm-integration.md  notion-integration.md  windows-automation.md
docs/: README.md
docs/api/: data-schema.md  notion.md  toast.md  utils.md
docs/architecture/: folder-structure.md  overview.md
docs/best/: claude-md-best-practices.md  monorepo-skills-design.md  skills-spec-driven-workflow.md  skills-subagents-common-design.md  subagent-best-practices.md
docs/design/: 01-logger-flow.md  02-aggregation-flow.md  03-llm-flow.md  04-notion-flow.md
docs/domain/: README.md
docs/implementation/: toast-gateway-summary.md
docs/phases/: phase1-mvp.md  phase2-stability.md  phase3-llm.md  phase4-precision.md  phase5-production.md
examples/: domain_usage_example.py  notion_example.py  summarizer_usage.py  toast_example.py
scripts/: README.md  logger.ps1  register_task.ps1  validate_utils.py
src/: __init__.py
src/domain/: __init__.py  capture.py  features.py  report.py
src/gateways/: __init__.py  gemini.py  notion.py  toast.py
src/repositories/: __init__.py  log_repository.py
src/services/: __init__.py  aggregator.py  summarizer.py
src/utils/: __init__.py  block_builder.py  text_utils.py  time_utils.py
(+30 files in other folders)
